--- a/WebContent/listarUsuario.xhtml
+++ b/WebContent/listarUsuario.xhtml
@@ -52,7 +52,7 @@
           <p:column>
            <f:facet name="header">Endereço</f:facet >
               <h:form>
-           <h:commandLink immediate="true" value="Telefones" action="cadastrartelefone.jsf" >
+           <h:commandLink immediate="true" value="Endereço" action="cadastrartelefone.jsf" >
             <f:param name="codigouser" value="#{user.idCliente}"/>
            </h:commandLink>
                </h:form>
